--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -19,4 +19,6 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
+  DB_HOST: sd1nttcbqt0ds4j.cxsmtmlheyxb.ap-northeast-1.rds.amazonaws.com
+  DB_NAME: SumireApp
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
