--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,5 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  adapter: postgresql
-  encoding: unicode
-  pool: 5
-  database: sumire_production
-  username: sumire
-  password: <%= ENV['SUMIRE_DATABESE_PASSWORD'] %>
+#  <<: *default
+  url: <%= ENV['DATABASE_URL']%>
