--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-#  <<: *default
-  url: <%= ENV['DATABASE_URL']%>
+  adapter: postgresql
+  encording: unicode
+  pool: 5
+  database: sumire_production
+  username: sumire
+  password: <%= ENV['DB_PASSWORD'] %>
